test/good/generators/default01.px

g: String...
print [...g]
g = g
print {'a', ...g}
