test/bad/arrays/decl07.px

a = [['a']]
a': [[[[String]]]] = [[[['x']], a]]
